(executable
 (name LockOne)
 (libraries unix)
 (modes exe))

(executable
 (name LockTwo)
 (libraries unix)
 (modes exe))

(executable
 (name Peterson)
 (libraries unix)
 (modes exe))

(executable
 (name Bakery)
 (libraries unix)
 (modes exe))

(executable
 (name Counter)
 (libraries unix)
 (modes exe))
