(library
 (name spinlocks)
 (modules Lock Benchmark TASLock TTASLock BackoffLock ALock))

(executable
 (name test_tas)
 (libraries unix spinlocks)
 (modules test_tas)
 (modes exe))

(executable
 (name test_ttas)
 (libraries unix spinlocks)
 (modules test_ttas)
 (modes exe))

(executable
 (name test_backoff)
 (libraries unix spinlocks)
 (modules test_backoff)
 (modes exe))

(executable
 (name test_alock)
 (libraries unix spinlocks)
 (modules test_alock)
 (modes exe))

(executable
 (name benchmark_all_locks)
 (libraries unix spinlocks)
 (modules benchmark_all_locks)
 (modes exe))

